<resources>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_maps">Peta</string>
    <string name="title_activity_lead_list">Daftar Peminat</string>
    <!-- v1.0.0 -->
    <string name="facebook_app_id">3938168939589587</string>
    <string name="fb_login_protocol_scheme">fb3938168939589587</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="forgot_password">Lupa Kata Sandi?</string>
    <string name="enter">Masuk</string>
    <string name="or">Atau</string>
    <string name="login_by_phone">Masuk dengan Nomor Ponsel</string>
    <string name="login_by_fb">Masuk dengan Facebook</string>
    <string name="login_by_google">Masuk dengan Google</string>
    <string name="login_message">Dengan Masuk, Anda menyetujui <b>Syarat &amp; Ketentuan</b> serta <b>Kebijakan Privasi</b> KlinikRumah.id</string>
    <string name="dont_have_account_register">Belum punya akun? <b>Daftar</b></string>
    <string name="name">Nama</string>
    <string name="location">Lokasi</string>
    <string name="lat_long_desc">LatLong, untuk dibuka di Google Maps</string>
    <string name="btn_lat_long">Set LatLong</string>
    <string name="allow_location">Izinkan KlinikRumah mengakses lokasi Anda?</string>
    <string name="project">Proyek</string>
    <string name="action">Aksi</string>
    <string name="survey">Survei</string>
    <string name="point_to_discuss">Pokok Diskusi</string>
    <string name="draft_design">Konsep Desain</string>
    <string name="offering">Penawaran</string>
    <string name="description">Keterangan</string>
    <string name="budget">Anggaran</string>
    <string name="size_building">Ukuran Bangunan</string>
    <string name="size_land">Luas Tanah</string>
    <string name="date">Tanggal</string>
    <string name="todo">PR</string>
    <string name="contact">Kontak</string>
    <string name="choose_from">Dipilih dari:</string>
    <string-array name="file_upload_array">
        <item>Galeri</item>
        <item>Kamera</item>
        <item>Pengelola Berkas</item>
        <item>Batal</item>
    </string-array>
    <string name="error_general">Halaman Tidak Dapat Diakses</string>
    <string name="error_general_content">Mohon maaf, terjadi kesalahan. Silakan coba kembali</string>
    <string name="data_not_found">Data tidak ditemukan</string>
    <string name="data_not_found_content">Silakan buat data baru dengan klik tombol</string>
    <string name="try_again">Coba Lagi</string>
    <string name="create">Buat</string>
    <string name="add">Tambah</string>
    <string name="edit">Ubah</string>
    <string name="submit">Kirim</string>
    <string name="update">Perbarui</string>
    <string name="cancel">Batalkan</string>
    <string name="search">Cari</string>
    <string name="plus">+</string>
    <string name="remove">x</string>
    <string name="allow">Izinkan</string>
    <string name="attach">Lampirkan</string>
    <string name="save">Simpan</string>
    <string name="saving_image">Menyimpan Gambar</string>
    <string name="preparing_card">Mendeteksi Kartu Penyimpanan</string>
    <string name="no_storage_card">Kartu Penyimpanan tidak terdeteksi</string>
    <string name="not_enough_space">Ruang tidak cukup</string>
    <string name="alert_max_file">Ukuran maksimal file dokumen di bawah </string>
    <string name="email_mandatory">Email wajib diisi</string>
    <string name="password_mandatory">Kata sandi wajib diisi</string>
    <string name="email_invalid">Silakan masukkan email dengan format yang sesuai</string>
    <string name="password_invalid">Silakan masukkan kata sandi minimal 6 karakter</string>
</resources>