<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_v"
    android:orientation="vertical"
    android:padding="@dimen/spc_parent"
    android:theme="@style/Theme.MaterialComponents.Light">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo" />
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/KRTextInputLayout"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            style="@style/KRTextInputEditText"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/KRTextInputLayout"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                style="@style/KRTextInputEditText"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/iv_visibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/spc_content"
            android:src="@drawable/ic_visibility_black_24dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_forgot_pwd"
        style="@style/KRTextView"
        android:layout_marginTop="@dimen/spc_child"
        android:gravity="end"
        android:text="@string/forgot_password" />

    <Button
        android:id="@+id/btn_login"
        style="@style/KRButton.Active"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/spc_parent"
        android:text="@string/enter" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spc_parent"
        android:gravity="center_vertical">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray" />

        <TextView
            style="@style/KRTextView"
            android:layout_width="wrap_content"
            android:layout_marginHorizontal="@dimen/spc_child"
            android:text="@string/or" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login_by_phone"
        style="@style/KRButton.Active"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/spc_parent"
        android:background="@color/green"
        android:text="@string/login_by_phone" />

    <Button
        android:id="@+id/btn_login_by_fb"
        style="@style/KRButton.Active"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/spc_parent"
        android:background="@color/blue"
        android:text="@string/login_by_fb"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_login_by_google"
        style="@style/KRButton.Active"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/spc_parent"
        android:background="@color/red"
        android:text="@string/login_by_google"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tv_tnc"
        style="@style/KRTextView"
        android:layout_marginTop="@dimen/spc_parent"
        android:gravity="center"
        android:text="@string/login_message" />

    <TextView
        android:id="@+id/tv_register"
        style="@style/KRTextView"
        android:layout_marginTop="@dimen/spc_parent"
        android:gravity="center"
        android:text="@string/dont_have_account_register" />
</LinearLayout>