<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingHorizontal="@dimen/spc_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/spc_parent"
            android:paddingBottom="64dp">

            <TextView
                style="@style/KRTextView"
                android:text="@string/name" />

            <TextView
                android:id="@+id/tv_client_name"
                style="@style/KRTextView.Black"
                tools:text="Prof. Dr. Muhammad Irvan Tommi, Lc hafizhohullah ta'ala" />

            <LinearLayout
                android:id="@+id/ll_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spc_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/KRTextView"
                        android:text="@string/location" />

                    <TextView
                        android:id="@+id/tv_project_location"
                        style="@style/KRTextView.Black"
                        tools:text="Jannatul Firdaus" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_to_maps"
                    android:layout_width="@dimen/ic_small"
                    android:layout_height="@dimen/ic_small"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_chevron_right_black_24dp" />
            </LinearLayout>

            <TextView
                style="@style/KRTextView"
                android:layout_marginTop="@dimen/spc_content"
                android:text="@string/contact" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="2"
                tools:listitem="@layout/item_contact_detail" />

            <TextView
                style="@style/KRTextView"
                android:layout_marginTop="@dimen/spc_content"
                android:text="@string/project" />

            <TextView
                android:id="@+id/tv_project_name"
                style="@style/KRTextView.Black"
                tools:text="Membangun Istana" />

            <TextView
                style="@style/KRTextView"
                android:layout_marginTop="@dimen/spc_content"
                android:text="@string/action" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spc_item">

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/spc_content"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spc_content"
                    android:layout_marginLeft="@dimen/spc_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/KRTextView"
                        android:text="@string/survey" />

                    <TextView
                        android:id="@+id/tv_survey"
                        style="@style/KRTextView.Black"
                        tools:text="Belum" />

                    <TextView
                        style="@style/KRTextView"
                        android:layout_marginTop="@dimen/spc_content"
                        android:text="@string/point_to_discuss" />

                    <TextView
                        android:id="@+id/tv_point_to_discuss"
                        style="@style/KRTextView.Black"
                        tools:text="-" />

                    <TextView
                        style="@style/KRTextView"
                        android:layout_marginTop="@dimen/spc_content"
                        android:text="@string/draft_design" />

                    <TextView
                        android:id="@+id/tv_draft_design"
                        style="@style/KRTextView.Black"
                        tools:text="Denah Istana Sudah Diberikan" />

                    <TextView
                        style="@style/KRTextView"
                        android:layout_marginTop="@dimen/spc_content"
                        android:text="@string/offering" />

                    <TextView
                        android:id="@+id/tv_offering"
                        style="@style/KRTextView.Black"
                        tools:text="-" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                style="@style/KRTextView"
                android:layout_marginTop="@dimen/spc_content"
                android:text="@string/description" />

            <TextView
                android:id="@+id/tv_description"
                style="@style/KRTextView.Black"
                tools:text="Minta Layout + Estimasi Harga" />

            <TextView
                style="@style/KRTextView"
                android:layout_marginTop="@dimen/spc_content"
                android:text="@string/budget" />

            <TextView
                android:id="@+id/tv_budget"
                style="@style/KRTextView.Black"
                tools:text="1 M" />

            <TextView
                style="@style/KRTextView"
                android:layout_marginTop="@dimen/spc_content"
                android:text="@string/size_building" />

            <TextView
                android:id="@+id/tv_size_building"
                style="@style/KRTextView.Black"
                tools:text="20 x 22,5 m2" />

            <TextView
                style="@style/KRTextView"
                android:layout_marginTop="@dimen/spc_content"
                android:text="@string/size_land" />

            <TextView
                android:id="@+id/tv_size_land"
                style="@style/KRTextView.Black"
                tools:text="750 m2" />

            <TextView
                style="@style/KRTextView"
                android:layout_marginTop="@dimen/spc_content"
                android:text="@string/date" />

            <TextView
                android:id="@+id/tv_date"
                style="@style/KRTextView.Black"
                tools:text="1 Ramadhan 1453 H" />

            <TextView
                style="@style/KRTextView"
                android:layout_marginTop="@dimen/spc_content"
                android:text="@string/todo" />

            <TextView
                android:id="@+id/tv_todo"
                style="@style/KRTextView.Black"
                tools:text="Keterangan" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_edit"
        style="@style/KRFloatingActionBtn"
        android:layout_marginBottom="@dimen/spc_parent"
        android:src="@drawable/ic_edit_black_24dp"
        app:fabSize="mini" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>